# template-axum-solidjs-spa

./: .env.TEMPLATE  .gitignore  README.md  update.sh
.github/: dependabot.yml
.github/linters/: .markdown-lint.yml
.github/workflows/: ci.yml  combine.yml  lint-test-fmt.yml
client/: .eslintrc.cjs  .prettierignore  index.html  package.json  postcss.config.js  prettier.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  index.tsx
client/src/components/: ExternalLink.tsx  Footer.tsx  NavHeader.tsx  PrefetchLink.tsx
client/src/routes/: About.tsx  Home.tsx  NotFound.tsx
client/src/stores/: dataSaver.ts  isDark.ts  theme.ts
client/src/tests/: example.test.ts
server/: Cargo.toml
server/src/: cache_control.rs  error.rs  main.rs  state.rs
