[package]
name = "template-axum-solidjs-spa"
authors = ["Rob Wagner <rob@sombia.com>"]
license = "MIT-0"
repository = "https://github.com/robertwayne/template-axum-solidjs-spa"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8" }
dotenvy = { version = "0.15" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
mimalloc = { version = "0.1", features = ["secure"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", default-features = false, features = [
    "compression-br",
    "cors",
    "fs",
    "trace",
] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
